// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph DataProcessor getTimeSeries from LegacyResponseData Should return a new series for each field 1`] = `
Array [
  TimeSeries {
    "alias": "Value",
    "aliasEscaped": "Value",
    "bars": Object {
      "fillColor": "#7EB26D",
    },
    "color": "#7EB26D",
    "datapoints": Array [
      Array [
        1,
        1001,
      ],
      Array [
        2,
        1002,
      ],
      Array [
        3,
        1003,
      ],
    ],
    "fieldName": "Value",
    "hasMsResolution": false,
    "id": "Value",
    "label": "Value",
    "legend": true,
    "stats": Object {},
    "unit": "watt",
    "valueFormater": [Function],
    "view": Array [
      Object {
        "Time": 1001,
        "Value": 1,
      },
      Object {
        "Time": 1002,
        "Value": 2,
      },
      Object {
        "Time": 1003,
        "Value": 3,
      },
    ],
  },
  TimeSeries {
    "alias": "table_data v1",
    "aliasEscaped": "table_data v1",
    "bars": Object {
      "fillColor": "#EAB839",
    },
    "color": "#EAB839",
    "datapoints": Array [
      Array [
        0.1,
        1001,
      ],
      Array [
        0.2,
        1002,
      ],
      Array [
        0.3,
        1003,
      ],
    ],
    "fieldName": "v1",
    "hasMsResolution": false,
    "id": "table_data v1",
    "label": "table_data v1",
    "legend": true,
    "stats": Object {},
    "unit": "ohm",
    "valueFormater": [Function],
    "view": Array [
      Object {
        "string": "a",
        "time": 1001,
        "v1": 0.1,
        "v2": 1.1,
      },
      Object {
        "string": "b",
        "time": 1002,
        "v1": 0.2,
        "v2": 2.2,
      },
      Object {
        "string": "c",
        "time": 1003,
        "v1": 0.3,
        "v2": 3.3,
      },
    ],
  },
  TimeSeries {
    "alias": "table_data v2",
    "aliasEscaped": "table_data v2",
    "bars": Object {
      "fillColor": "#6ED0E0",
    },
    "color": "#6ED0E0",
    "datapoints": Array [
      Array [
        1.1,
        1001,
      ],
      Array [
        2.2,
        1002,
      ],
      Array [
        3.3,
        1003,
      ],
    ],
    "fieldName": "v2",
    "hasMsResolution": false,
    "id": "table_data v2",
    "label": "table_data v2",
    "legend": true,
    "stats": Object {},
    "unit": undefined,
    "valueFormater": [Function],
    "view": Array [
      Object {
        "string": "a",
        "time": 1001,
        "v1": 0.1,
        "v2": 1.1,
      },
      Object {
        "string": "b",
        "time": 1002,
        "v1": 0.2,
        "v2": 2.2,
      },
      Object {
        "string": "c",
        "time": 1003,
        "v1": 0.3,
        "v2": 3.3,
      },
    ],
  },
  TimeSeries {
    "alias": "series v1",
    "aliasEscaped": "series v1",
    "bars": Object {
      "fillColor": "#EF843C",
    },
    "color": "#EF843C",
    "datapoints": Array [
      Array [
        0.1,
        1001,
      ],
      Array [
        0.2,
        1002,
      ],
      Array [
        0.3,
        1003,
      ],
    ],
    "fieldName": "v1",
    "hasMsResolution": false,
    "id": "series v1",
    "label": "series v1",
    "legend": true,
    "stats": Object {},
    "unit": undefined,
    "valueFormater": [Function],
    "view": Array [
      Object {
        "string": "a",
        "time": 1001,
        "v1": 0.1,
        "v2": 1.1,
      },
      Object {
        "string": "b",
        "time": 1002,
        "v1": 0.2,
        "v2": 2.2,
      },
      Object {
        "string": "c",
        "time": 1003,
        "v1": 0.3,
        "v2": 3.3,
      },
    ],
  },
  TimeSeries {
    "alias": "series v2",
    "aliasEscaped": "series v2",
    "bars": Object {
      "fillColor": "#E24D42",
    },
    "color": "#E24D42",
    "datapoints": Array [
      Array [
        1.1,
        1001,
      ],
      Array [
        2.2,
        1002,
      ],
      Array [
        3.3,
        1003,
      ],
    ],
    "fieldName": "v2",
    "hasMsResolution": false,
    "id": "series v2",
    "label": "series v2",
    "legend": true,
    "stats": Object {},
    "unit": undefined,
    "valueFormater": [Function],
    "view": Array [
      Object {
        "string": "a",
        "time": 1001,
        "v1": 0.1,
        "v2": 1.1,
      },
      Object {
        "string": "b",
        "time": 1002,
        "v1": 0.2,
        "v2": 2.2,
      },
      Object {
        "string": "c",
        "time": 1003,
        "v1": 0.3,
        "v2": 3.3,
      },
    ],
  },
]
`;

exports[`Graph DataProcessor getTimeSeries from LegacyResponseData Should return single histogram 1`] = `
Array [
  TimeSeries {
    "alias": "Count",
    "aliasEscaped": "Count",
    "bars": Object {
      "fillColor": "#7EB26D",
    },
    "color": "#7EB26D",
    "datapoints": Array [
      Array [
        1,
        1001,
      ],
      Array [
        2,
        1002,
      ],
      Array [
        3,
        1003,
      ],
      Array [
        0.1,
        1001,
      ],
      Array [
        0.2,
        1002,
      ],
      Array [
        0.3,
        1003,
      ],
      Array [
        1.1,
        1001,
      ],
      Array [
        2.2,
        1002,
      ],
      Array [
        3.3,
        1003,
      ],
      Array [
        0.1,
        1001,
      ],
      Array [
        0.2,
        1002,
      ],
      Array [
        0.3,
        1003,
      ],
      Array [
        1.1,
        1001,
      ],
      Array [
        2.2,
        1002,
      ],
      Array [
        3.3,
        1003,
      ],
    ],
    "fieldName": "Value",
    "hasMsResolution": false,
    "id": "Value",
    "label": "Value",
    "legend": true,
    "stats": Object {},
    "unit": "watt",
    "valueFormater": [Function],
    "view": Array [
      Object {
        "Time": 1001,
        "Value": 1,
      },
      Object {
        "Time": 1002,
        "Value": 2,
      },
      Object {
        "Time": 1003,
        "Value": 3,
      },
    ],
  },
]
`;
